[gd_scene load_steps=2 format=3 uid="uid://byuiv7hdfyf4c"]

[ext_resource type="Script" path="res://Components/FocusArea.gd" id="1_bau7e"]

[node name="FocusArea" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_bau7e")

[node name="Collider" type="CollisionShape2D" parent="."]

[connection signal="input_event" from="." to="." method="onInputEvent"]
[connection signal="mouse_entered" from="." to="." method="onMouseEntered"]
[connection signal="mouse_exited" from="." to="." method="onMouseExited"]
